# vqf

./: .gitignore  CMakeLists.txt  README.md  _clang-format  conanfile.py  cor.yml
src/: CMakeLists.txt
src/vqf/: generate_shuffle_matrix.cc  vqf.cpp  vqf.hpp  vqf.test.cpp  vqf_filter.cpp  vqf_filter.h  vqf_wrapper.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
